# antispam

./: .gitignore  Cargo.toml  Rocket.toml  config.json  readme.md
.github/workflows/: rust.yml
src/: main.rs  tests.rs
