[package]
name = "antispam"
version = "0.1.0"
authors = ["Christian Wiegand <cwiegand@wgdnet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
bayespam = "1.0.3"
serde = "1.0.116"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rocket_contrib = "0.4.5"
clap = "3.0.0-beta.2"