[package]
name = "antispam"
version = "0.1.0"
authors = ["Christian Wiegand <cwiegand@wgdnet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "tls", "json"] }
bayespam = "1.1.0"
serde = "1.0.188"
serde_json = { version = "1.0.107", default-features = false, features = ["alloc"] }
clap = { version = "4.4.3", features = ["derive"] }